--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/GamesOnSteroids/Hub/issues"
   },
-  "homepage": "https://github.com/GamesOnSteroids/Hub"
+  "homepage": "http://www.gamesonsteroids.com"
 }
