--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "removeComments": true,
     "sourceMap": true,
     "target": "es6",
-    "jsx": "react"
+    "jsx": "react",
+    "noImplicitAny": true
   }
 }
