--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,10 @@
     "target": "es6",
     "jsx": "react",
     "noImplicitAny": true
-  }
+  },
+  "exclude": [
+    "typings/main.d.ts",
+    "typings/main",
+    "node_modules"
+  ]
 }
