--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-typescript": "^2.12.0",
+    "jasmine-core": "^2.4.1",
+    "karma-jasmine": "^0.3.7",
     "karma-phantomjs-launcher": "^1.0.0",
     "phantomjs-prebuilt": "^2.1.4"
   },
