--- a/package.json
+++ b/package.json
@@ -5,20 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "firebase": "^2.4.0",
-    "karma": "^0.13.21",
-    "karma-requirejs": "^0.2.5",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "requirejs": "^2.1.22"
+    "react-dom": "^0.14.7"
   },
   "devDependencies": {
+    "karma": "^0.13.21",
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-typescript": "^2.12.0",
     "jasmine-core": "^2.4.1",
-    "karma-jasmine": "^0.3.7",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "phantomjs-prebuilt": "^2.1.4"
+    "karma-jasmine": "^0.3.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
